--- a/index.html
+++ b/index.html
@@ -85,9 +85,38 @@
                 <div class="liberty"><img class="liberty__image" src="image/group4.svg" alt=""></div>
                 <a class="show-all" href="">Показать все</a>
                 <a class="button-registration" href="">зарегистрироваться</a>
-                <a class="social-network" href=""><img class="social-network__image" src="image/facebook.svg" alt=""></a>
-                <a class="social-network" href=""><img class="social-network__image" src="image/instagram.svg" alt=""></a>
-                <a class="social-network" href=""><img class="social-network__image" src="image/viber.svg" alt=""></a>
+                <div class="wrapper">
+                    <a class="social-network" href=""><img class="social-network__image" src="image/facebook.svg" alt=""></a>
+                    <a class="social-network" href=""><img class="social-network__image" src="image/instagram.svg" alt=""></a>
+                    <a class="social-network" href=""><img class="social-network__image" src="image/viber.svg" alt=""></a>
+                    <div class="feedback">
+                        <a href="">
+                            <img class="feedback__image" src="image/chat.svg" alt="">
+                        </a>
+                        <span class="feedback__text">чат онлайн</span>
+                    </div>
+                    <div class="feedback">
+                        <a href="">
+                            <img class="feedback__image" src="image/post-us.svg" alt="">
+                        </a>
+                        <span class="feedback__text down">Написать нам</span>
+                    </div>
+                    <div class="button-up">
+                        <span class="button-up__text">Вверх</span>
+                        <button class="button-up__button">
+                            <img class="button-up__image" src="image/vector.svg" alt="">
+                        </button>
+                    </div>
+                    <a href="" class="link">
+                        <img class="link__image" src="image/portmone.svg" alt="">
+                    </a>
+                    <a href="" class="link">
+                        <img class="link__image" src="image/mastercard.svg" alt="">
+                    </a>
+                    <a href="" class="link">
+                        <img class="link__image" src="image/visa.png" alt="">
+                    </a>
+                </div>
             </main>
         </div>
     </div>
